Fix grid alignmentof the calculator

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -32,7 +32,6 @@ button {
     width: 70px;
     height: 70px;
 
-    margin: 4px;
     border: 3px solid $base-border;
 
     font-size: 20px;
@@ -47,31 +46,33 @@ button.undefined {
 }
 
 #calculator {
+    width: 350px;
     border: 3px solid $base-border;
     border-radius: 9px;
-    padding: 12px;
+    padding: 18px;
     box-shadow: 8px 8px 0 $base-border;
     background-color: $base-color;
 
     #display {
+        width: 100%;
         height: 80px;
 
         display: flex;
         align-items: center;
 
         margin-bottom: 12px;
-        margin-left: 4px;
         border: 3px solid $base-border;
         border-radius: 9px;
         padding: 8px;
 
-        overflow-x: hidden;
+        overflow: scroll;
         font-size: 10px;
     }
 
     #tools {
-        display: grid;
-        grid-template-columns: auto auto auto auto;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 5px;
 
         button {
             background-color: $secondary;
@@ -82,13 +83,16 @@ button.undefined {
         display: flex;
 
         #numbers {
+            width: 100%;
             display: grid;
             grid-template-columns: auto auto auto;
+            row-gap: 5px;
         }
 
         #operations {
             display: grid;
             grid-template-columns: auto;
+            row-gap: 5px;
 
             button {
                 background-color: $bg-color;
